# farfield

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum
.claude/skills/content-addressing/: SKILL.md
.claude/skills/farfield-stack/: SKILL.md
.claude/skills/farfield-style/: SKILL.md
.claude/skills/self-migrating-sqlite/: SKILL.md
.github/workflows/: ci.yml  docker.yml
apps/apex/: Dockerfile  apex_test.go  docker-compose.yml  go.mod  main.go  main_test.go
apps/apex/web/: index.html
apps/ba2d/: Dockerfile  ba2d_test.go  go.mod  main.go
apps/ba2d/web/: app.js  index.html  style.css  worker.js
apps/backup/: Dockerfile  auth.go  backup_test.go  db.go  docker-compose.yml  go.mod  main.go  server.go  snapshot.go
apps/backup/templates/: base.html  index.html  login.html
apps/bard/: Dockerfile  bard_test.go  go.mod  main.go
apps/bard/web/: app.js  index.html  worker.js
apps/blobs/: Cargo.toml  Dockerfile  auth.go  backups.go  blobs_test.go  cid.go  db.go  docker-compose.yml  go.mod  go.sum  main.go  meta.go  migrate.go  r2.go  read_gate_test.go  server.go  store.go
apps/blobs/src/: main.rs
apps/blobs/templates/: base.html  index.html  login.html  upload.html
apps/bookmarks/: Dockerfile  auth.go  bookmarks_test.go  db.go  docker-compose.yml  go.mod  main.go  metadata.go  read_gate_test.go  server.go
apps/bookmarks/templates/: admin_index.html  base.html  bookmark_form.html  index.html  login.html  public_index.html
apps/calendar/: Dockerfile  calendar_test.go  db.go  docker-compose.yml  go.mod  main.go  media.go  nasa.go  server.go  sources.go  ufo.go
apps/calendar/templates/: archive.html  base.html  photo.html
apps/content/: Cargo.toml  Dockerfile  content_test.go  db.go  docker-compose.yml  embed.go  embed_test.go  go.mod  main.go  migrate.go  read_api_test.go  reslug.go  server.go  slug.go
apps/content/src/: main.rs
apps/content/templates/: base.html  collection_form.html  dashboard.html  entries.html  entry_form.html  login.html  series.html  series_form.html
apps/daily/: art.go  art_test.go  artsvg.go  biome.go  daily_test.go  db.go  docker-compose.yml  go.mod  hilbert.go  hilbert_test.go  hub.go  hub_test.go  main.go  nasa.go  seed.go  server.go  solvestate.go  sources.go  sudoku.go  sudoku_http.go  sudoku_test.go  terrain.go  wordle.go  wordle_answers.txt  wordle_http.go  wordle_test.go  wordle_valid.txt  zones.go
apps/daily/static/: art.js  structure.js  sudoku.js  terrain.js  wordle.js
apps/daily/templates/: archive.html  art.html  art_structure.html  base.html  hub.html  login.html  photo.html  sudoku.html  wordle.html
apps/dead-presidents/: Dockerfile  dead_presidents_test.go  go.mod  main.go
apps/dead-presidents/web/: app.js  engine.js  index.html  model.json  openai.js  worker.js
apps/farfield/: export.go  export_test.go  main.go  migrate.go  publish.go  series.go  series_test.go  upload.go
apps/feed/: Cargo.toml  Dockerfile  db.go  docker-compose.yml  embed.go  embed_test.go  feed_test.go  go.mod  main.go  migrate.go  read_gate_test.go  render.go  server.go
apps/feed/src/: main.rs
apps/feed/templates/: base.html  index.html  login.html  post_form.html
apps/keys/: go.mod  go.sum  keys_test.go  main.go  server.go
apps/keys/templates/: base.html  (+4 more)
apps/opds/: Dockerfile  auth.go  db.go  docker-compose.yml  go.mod  main.go  opds.go  opds_test.go  r2.go  server.go
apps/pulse/: charts.go  checker.go  collector.go  db.go  go.mod  main.go  pulse_test.go  server.go  traffic.go
apps/qr/: Dockerfile  auth.go  db.go  docker-compose.yml  go.mod  main.go  qr_test.go  qrenc.go  read_gate_test.go  server.go
apps/scrap/: db.go  docker-compose.yml  go.mod  go.sum  highlight.go  main.go  scrap_test.go  server.go
apps/sideload/: db.go  devices.go  devices_test.go  go.mod  go.sum  icon.go  images.go  ipa.go  main.go  manifest.go  markdown.go  ratelimit.go  rich_test.go  server.go  sideload_test.go  store.go
cli/: Cargo.toml
cli/src/: main.rs
crates/blobs/: Cargo.toml
crates/core/: Cargo.toml
crates/httpkit/: Cargo.toml
crates/records/: Cargo.toml
crates/records/src/: lib.rs
crates/schema/: Cargo.toml
crates/snapshot/: Cargo.toml
crates/store/: Cargo.toml
crates/store/src/: lib.rs
deploy/: .env.example  Dockerfile  docker-compose.yml  farfield.toml.example  update.sh
docs/: API.md
lib/auth/: auth.go  go.mod
lib/backup/: backup.go  go.mod
lib/blob/: blob.go  blob_test.go  r2.go  r2_integration_test.go  r2_test.go
lib/cid/: cid.go  cid_test.go  go.mod
lib/core/: core.go  core_test.go
lib/httpkit/: httpkit.go
lib/keys/: attach.go  go.mod  keys.go  keys_test.go
lib/pulse/: go.mod  pulse.go  pulse_test.go
lib/qrenc/: go.mod  qrenc.go  qrenc_test.go
lib/records/: records.go
lib/schema/: schema.go  schema_test.go
lib/store/: db.go  go.mod  store.go  store_test.go
lib/theme/: editor.js  go.mod  serve.go  serve_test.go  theme.css  theme.go
lib/web/: auth.go  faillimit.go  go.mod  json.go  keys_test.go  middleware.go  ratelimit.go  server.go  templates.go  web_test.go
obsidian-plugin/: README.md  esbuild.config.mjs  main.ts  manifest.json  package-lock.json  package.json  tsconfig.json
schemas/: .gitkeep
schemas/content/: collections.json  entry.json  media.json  series.json
schemas/feed/: collections.json  entry.json
server/: Cargo.toml
server/src/: main.rs
shortcuts/: README.md  bookmarks.cherri  build.sh  feed.cherri  qr.cherri
(+72 files in other folders)
