# Farfield — a self-owned content backend.
#
# An Andromeda-shaped workspace: shared library crates + three deployable
# app services. content and feed are typed-records services (each its own
# SQLite DB + domain) built on a shared records engine; blobs is a shared
# content-addressed blob service the others consume.
#
# Design doc: ~/.gstack/projects/mission-control/iammatthias-main-design-20260515-091028.md

[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/schema",
    "crates/store",
    "crates/httpkit",
    "crates/records",
    "crates/blobs",
    "crates/snapshot",
    "apps/content",
    "apps/feed",
    "apps/blobs",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["iammatthias <me@iammatthias.com>"]
repository = "https://github.com/iammatthias/farfield"

[workspace.dependencies]
# Internal crates.
farfield-core = { path = "crates/core" }
farfield-schema = { path = "crates/schema" }
farfield-store = { path = "crates/store" }
farfield-httpkit = { path = "crates/httpkit" }
farfield-records = { path = "crates/records" }
farfield-blobs = { path = "crates/blobs" }
farfield-snapshot = { path = "crates/snapshot" }

# Shared third-party deps (each crate opts in as it needs them).
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[profile.release]
strip = true
lto = "thin"
