[package]
name = "farfield-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "farfield"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
farfield-core.workspace = true
farfield-schema.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
time = { version = "0.3.47", features = ["parsing", "formatting"] }
