[package]
name = "farfield-blobs-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "farfield-blobs"
path = "src/main.rs"

[dependencies]
farfield-core.workspace = true
farfield-blobs.workspace = true
farfield-httpkit.workspace = true
axum = "0.8.9"
anyhow.workspace = true
serde_json.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }
