[package]
name = "farfield-records"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
farfield-core.workspace = true
farfield-schema.workspace = true
farfield-store.workspace = true
farfield-httpkit.workspace = true
axum = "0.8.9"
anyhow.workspace = true
serde_json.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde.workspace = true
