[package]
name = "farfield-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
farfield-core.workspace = true
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
thiserror.workspace = true
time = { version = "0.3.47", features = ["formatting"] }
